# smart_chess

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
ai-service/: .dockerignore  AI_ARCHITECTURE.md  Dockerfile  requirements.txt
ai-service/app/: chess_env.py  config.py  drills.py  main.py  mcts.py  model.py  monitoring.py  online_learner.py  puzzles.py  self_play.py  trainer.py  tutor.py
ai-service/tests/: test_ai_service.py
engine/: .dockerignore  Cargo.toml  Dockerfile
engine/src/: api.rs  attacks.rs  board.rs  chess960.rs  evaluation.rs  game.rs  lib.rs  main.rs  moves.rs  multiplayer.rs  persistence.rs  piece.rs  variants.rs  zobrist.rs
engine/tests/: engine_tests.rs
frontend/: .dockerignore  Dockerfile  generate-icon.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: achievements.js  api.js  board.js  bridge.js  cosmetics.js  daily-puzzle.js  editor.js  main.js  monitoring.js  multiplayer.js  openings.js  pgn.js  pieces.js  rating.js  sounds.js  timed-drills.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: engine.rs  lib.rs  main.rs
