[package]
name = "chess-engine"
version = "1.0.0"
edition = "2021"
description = "High-performance chess engine with bitboard representation"
authors = ["3D Chess Team"]

[lib]
name = "chess_engine"
path = "src/lib.rs"

[[bin]]
name = "chess-engine"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
