[package]
name = "chess3d"
version = "1.0.0"
edition = "2021"
description = "3D Chess - Cross-platform chess game with AI"
authors = ["3D Chess Team"]

[lib]
name = "chess3d_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Import the chess engine as a local dependency (library mode)
chess-engine = { path = "../../engine" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
